plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'

}

android {
    namespace 'com.avon.mauritius.representative'
    compileSdk 35
    defaultConfig {
        applicationId "com.avon.mauritius.representative"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/*.properties'
        exclude 'META-INF/AL2.0'
        exclude 'META-INF/LGPL2.1'
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    implementation files('libs/activeandroidrx-3.1.0.jar')
//    implementation files('libs/rxjava-1.0.14.jar')
    implementation 'com.jakewharton:butterknife:10.1.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.android.volley:volley:1.2.0'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'
    implementation 'com.google.code.gson:gson:2.8.5'
    implementation 'kr.co.prnd:stepprogressbar:1.0.0-alpha1'
    implementation platform('com.google.firebase:firebase-bom:28.0.1')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.google.firebase:firebase-messaging:20.2.1'
//    implementation 'com.artifex.mupdf:viewer:1.18.0'
//    implementation 'com.anupcowkur:reservoir:3.0.0'
//    implementation 'com.github.anupcowkur:reservoir:3.1.0'
    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
    implementation("io.writeopia:loading-button:3.0.0")

    implementation 'com.jakewharton:disklrucache:2.0.2'
    implementation 'io.reactivex:rxandroid:1.2.1'
    implementation 'io.reactivex:rxjava:1.1.6'
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'


}